runtime/pavex_macros/tests/config/fail/missing_key_with_usage.rs
use pavex_macros::config;

#[config]
pub struct MyConfig {
    pub value: String,
}

fn main() {
    let _config = MyConfig {
        value: "test".to_string(),
    };
}
